--- a/assets/css/bootstrap/_button-group.scss
+++ b/assets/css/bootstrap/_button-group.scss
@@ -1,17 +1,19 @@
 // stylelint-disable selector-no-qualifying-type
 
-// Make the div behave like a button
+// Button Group
+
+// Make the `div` behave like a button
 .btn-group,
 .btn-group-vertical {
   position: relative;
   display: inline-flex;
-  vertical-align: middle; // match .btn alignment given font-size hack above
+  vertical-align: middle; // match `.btn` alignment given `font-size` hack above
 
   > .btn {
     position: relative;
     flex: 1 1 auto;
 
-    // Bring the hover, focused, and "active" buttons to the front to overlay the borders properly
+    // Bring the `:hover`, `:focus`, and `:active` buttons to the front to overlay the borders properly
     @include hover {
       z-index: 1;
     }
@@ -53,16 +55,13 @@
   }
 }
 
-// Sizing
+// Button Sizing
 
-// Remix the default button sizing classes into new ones for easier manipulation.
-
+// Remix the default button sizing classes into new ones for easier manipulation
 .btn-group-sm > .btn { @extend .btn-sm; }
 .btn-group-lg > .btn { @extend .btn-lg; }
 
-
 // Split button dropdowns
-
 .dropdown-toggle-split {
   padding-right: $btn-padding-x * .75;
   padding-left: $btn-padding-x * .75;
@@ -88,20 +87,17 @@
   padding-left: $btn-padding-x-lg * .75;
 }
 
-
-// The clickable button for toggling the menu
-// Set the same inset shadow as the :active state
+// The clickable button for toggling the menu sets the same inset shadow as the `:active` state.
 .btn-group.show .dropdown-toggle {
   @include box-shadow($btn-active-box-shadow);
 
-  // Show no shadow for `.btn-link` since it has no other button styles.
+  // Show no shadow for `.btn-link` since it has no other button styles
   &.btn-link {
     @include box-shadow(none);
   }
 }
 
-
-// Vertical button groups
+// Vertical Button Group
 
 .btn-group-vertical {
   flex-direction: column;
@@ -130,12 +126,10 @@
   }
 }
 
-
-// Checkbox and radio options
+// Checkbox and Radio Option
 
 // In order to support the browser's form validation feedback, powered by the `required` attribute, we have to "hide" the inputs via `clip`. We cannot use `display: none;` or `visibility: hidden;` as that also hides the popover. Simply visually hiding the inputs via `opacity` would leave them clickable in certain cases which is prevented by using `clip` and `pointer-events`. This way, we ensure a DOM element is visible to position the popover from.
 // See https://github.com/twbs/bootstrap/pull/12794 and https://github.com/twbs/bootstrap/pull/14559 for more information.
-
 .btn-group-toggle {
   > .btn,
   > .btn-group > .btn {
