--- a/assets/css/bootstrap/_card.scss
+++ b/assets/css/bootstrap/_card.scss
@@ -1,4 +1,4 @@
-// Base styles
+// Card
 
 .card {
   position: relative;
@@ -30,7 +30,7 @@
 }
 
 .card-body {
-  // Enable `flex-grow: 1` for decks and groups so that card blocks take up as much space as possible, ensuring footers are aligned to the bottom.
+  // Enable `flex-grow: 1` for decks and groups so that card blocks take up as much space as possible, ensuring footers are aligned to the bottom
   flex: 1 1 auto;
   padding: $card-spacer-x;
   color: $card-color;
@@ -60,10 +60,9 @@
 }
 
 // Optional textual caps
-
 .card-header {
   padding: $card-spacer-y $card-spacer-x;
-  margin-bottom: 0; // Removes the default margin-bottom of <hN>
+  margin-bottom: 0; // Removes the default margin-bottom of `<hN>`
   color: $card-cap-color;
   background-color: $card-cap-bg;
   border-bottom: $card-border-width solid $card-border-color;
@@ -89,8 +88,7 @@
   }
 }
 
-
-// Header navs
+// Header Nav
 
 .card-header-tabs {
   margin-right: -$card-spacer-x / 2;
@@ -104,7 +102,7 @@
   margin-left: -$card-spacer-x / 2;
 }
 
-// Card image
+// Card Image
 
 .card-img-overlay {
   position: absolute;
@@ -116,23 +114,22 @@
 }
 
 .card-img {
-  width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
+  width: 100%; // Required because we use flexbox and this inherently applies `align-self: stretch`
   @include border-radius($card-inner-border-radius);
 }
 
 // Card image caps
 .card-img-top {
-  width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
+  width: 100%; // Required because we use flexbox and this inherently applies `align-self: stretch`
   @include border-top-radius($card-inner-border-radius);
 }
 
 .card-img-bottom {
-  width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
+  width: 100%; // Required because we use flexbox and this inherently applies `align-self: stretch`
   @include border-bottom-radius($card-inner-border-radius);
 }
 
-
-// Card deck
+// Card Deck
 
 .card-deck {
   display: flex;
@@ -159,21 +156,20 @@
   }
 }
 
-
-// Card groups
+// Card Group
 
 .card-group {
   display: flex;
   flex-direction: column;
 
-  // The child selector allows nested `.card` within `.card-group` to display properly.
+  // The child selector allows nested `.card` within `.card-group` to display properly
   > .card {
     margin-bottom: $card-group-margin;
   }
 
   @include media-breakpoint-up(sm) {
     flex-flow: row wrap;
-    // The child selector allows nested `.card` within `.card-group` to display properly.
+    // The child selector allows nested `.card` within `.card-group` to display properly
     > .card {
       // Flexbugs #4: https://github.com/philipwalton/flexbugs#flexbug-4
       flex: 1 0 0%;
@@ -220,8 +216,7 @@
   }
 }
 
-
-// Columns
+// Column
 
 .card-columns {
   .card {
@@ -240,7 +235,6 @@
     }
   }
 }
-
 
 // Accordion
 
