--- a/assets/css/bootstrap/_input-group.scss
+++ b/assets/css/bootstrap/_input-group.scss
@@ -1,6 +1,6 @@
 // stylelint-disable selector-no-qualifying-type
 
-// Base styles
+// Input Group
 
 .input-group {
   position: relative;
@@ -26,7 +26,7 @@
     }
   }
 
-  // Bring the "active" form control to the top of surrounding elements
+  // Bring the `:active` form control to the top of surrounding elements
   > .form-control:focus,
   > .custom-select:focus,
   > .custom-file .custom-file-input:focus ~ .custom-file-label {
@@ -44,7 +44,7 @@
     &:not(:first-child) { @include border-left-radius(0); }
   }
 
-  // Custom file inputs have more complex markup, thus requiring different border-radius overrides.
+  // Custom file inputs have more complex markup, thus requiring different `border-radius` overrides
   > .custom-file {
     display: flex;
     align-items: center;
@@ -56,10 +56,9 @@
 }
 
 
-// Prepend and append
+// Prepend and Append
 
 // While it requires one extra layer of HTML for each, dedicated prepend and append elements allow us to 1) be less clever, 2) simplify our selectors, and 3) support HTML5 form validation.
-
 .input-group-prepend,
 .input-group-append {
   display: flex;
@@ -86,15 +85,14 @@
 .input-group-append { margin-left: -$input-border-width; }
 
 
-// Textual addons
+// Textual Addons
 
-// Serves as a catch-all element for any text or radio/checkbox input you wish to prepend or append to an input.
-
+// Serves as a catch-all element for any text or radio/checkbox input you wish to prepend or append to an input
 .input-group-text {
   display: flex;
   align-items: center;
   padding: $input-padding-y $input-padding-x;
-  margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
+  margin-bottom: 0; // Allow use of `<label>` elements by overriding our default margin-bottom
   @include font-size($input-font-size); // Match inputs
   font-weight: $font-weight-normal;
   line-height: $input-line-height;
@@ -105,18 +103,16 @@
   border: $input-border-width solid $input-group-addon-border-color;
   @include border-radius($input-border-radius);
 
-  // Nuke default margins from checkboxes and radios to vertically center within.
+  // Nuke default margins from checkboxes and radios to vertically center within
   input[type="radio"],
   input[type="checkbox"] {
     margin-top: 0;
   }
 }
 
-
 // Sizing
 
-// Remix the default form control sizing classes into new ones for easier manipulation.
-
+// Remix the default form control sizing classes into new ones for easier manipulation
 .input-group-lg > .form-control:not(textarea),
 .input-group-lg > .custom-select {
   height: $input-height-lg;
@@ -156,11 +152,9 @@
   padding-right: $custom-select-padding-x + $custom-select-indicator-padding;
 }
 
+// Prepend and Append Rounded Corners
 
-// Prepend and append rounded corners
-
-// These rulesets must come after the sizing ones to properly override sm and lg border-radius values when extending. They're more specific than we'd like with the `.input-group >` part, but without it, we cannot override the sizing.
-
+// These rulesets must come after the sizing ones to properly override sm and lg `border-radius` values when extending. They're more specific than we'd like with the `.input-group >` part, but without it, we cannot override the sizing.
 .input-group > .input-group-prepend > .btn,
 .input-group > .input-group-prepend > .input-group-text,
 .input-group > .input-group-append:not(:last-child) > .btn,
