--- a/assets/css/bootstrap/_pagination.scss
+++ b/assets/css/bootstrap/_pagination.scss
@@ -1,3 +1,5 @@
+// Pagination
+
 .pagination {
   display: flex;
   @include list-unstyled();
@@ -52,13 +54,12 @@
   &.disabled .page-link {
     color: $pagination-disabled-color;
     pointer-events: none;
-    // Opinionated: remove the "hand" cursor set previously for .page-link
+    // Opinionated: remove the "hand" cursor set previously for `.page-link`
     cursor: auto;
     background-color: $pagination-disabled-bg;
     border-color: $pagination-disabled-border-color;
   }
 }
-
 
 // Sizing
 
