--- a/assets/css/bootstrap/_progress.scss
+++ b/assets/css/bootstrap/_progress.scss
@@ -1,5 +1,6 @@
-// Disable animation if transitions are disabled
+// Progress
 
+// Disable animation if transitions are disabled
 @if $enable-transitions {
   @keyframes progress-bar-stripes {
     from { background-position: $progress-height 0; }
