--- a/assets/css/bootstrap/mixins/_background-variant.scss
+++ b/assets/css/bootstrap/mixins/_background-variant.scss
@@ -1,6 +1,6 @@
 // stylelint-disable declaration-no-important
 
-// Contextual backgrounds
+// Contextual Background
 
 @mixin bg-variant($parent, $color) {
   #{$parent} {
