--- a/assets/css/bootstrap/mixins/_breakpoints.scss
+++ b/assets/css/bootstrap/mixins/_breakpoints.scss
@@ -1,12 +1,12 @@
-// Breakpoint viewport sizes and media queries.
-//
-// Breakpoints are defined as a map of (name: minimum width), order from small to large:
+// Breakpoints
+
+// Breakpoints are viewport sizes and media queries, defined as a map of (name: minimum width), order from small to large:
 //
 //    (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 //
 // The map defined in the `$grid-breakpoints` global variable is used as the `$breakpoints` argument by default.
 
-// Name of the next breakpoint, or null for the last breakpoint.
+// Name of the next breakpoint, or null for the last breakpoint
 //
 //    >> breakpoint-next(sm)
 //    md
@@ -29,9 +29,10 @@
 }
 
 // Maximum breakpoint width. Null for the largest (last) breakpoint.
-// The maximum value is calculated as the minimum of the next one less 0.02px
-// to work around the limitations of `min-` and `max-` prefixes and viewports with fractional widths.
+//
+// The maximum value is calculated as the minimum of the next one less 0.02px to work around the limitations of `min-` and `max-` prefixes and viewports with fractional widths.
 // See https://www.w3.org/TR/mediaqueries-4/#mq-min-max
+//
 // Uses 0.02px rather than 0.01px to work around a current rounding bug in Safari.
 // See https://bugs.webkit.org/show_bug.cgi?id=178261
 //
@@ -42,8 +43,8 @@
   @return if($next, breakpoint-min($next, $breakpoints) - .02, null);
 }
 
-// Returns a blank string if smallest breakpoint, otherwise returns the name with a dash in front.
-// Useful for making responsive utilities.
+// Returns a blank string if smallest breakpoint, otherwise returns the name with a dash in front
+// Useful for making responsive utilities
 //
 //    >> breakpoint-infix(xs, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
 //    ""  (Returns a blank string)
@@ -53,8 +54,9 @@
   @return if(breakpoint-min($name, $breakpoints) == null, "", "-#{$name}");
 }
 
-// Media of at least the minimum breakpoint width. No query for the smallest breakpoint.
-// Makes the @content apply to the given breakpoint and wider.
+// Media of at least the minimum breakpoint width
+// No query for the smallest breakpoint
+// Makes the `@content` apply to the given breakpoint and wider
 @mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints) {
   $min: breakpoint-min($name, $breakpoints);
   @if $min {
@@ -66,8 +68,9 @@
   }
 }
 
-// Media of at most the maximum breakpoint width. No query for the largest breakpoint.
-// Makes the @content apply to the given breakpoint and narrower.
+// Media of at most the maximum breakpoint width
+// No query for the largest breakpoint
+// Makes the `@content` apply to the given breakpoint and narrower
 @mixin media-breakpoint-down($name, $breakpoints: $grid-breakpoints) {
   $max: breakpoint-max($name, $breakpoints);
   @if $max {
@@ -79,8 +82,8 @@
   }
 }
 
-// Media that spans multiple breakpoint widths.
-// Makes the @content apply between the min and max breakpoints
+// Media that spans multiple breakpoint widths
+// Makes the `@content` apply between the min and max breakpoints
 @mixin media-breakpoint-between($lower, $upper, $breakpoints: $grid-breakpoints) {
   $min: breakpoint-min($lower, $breakpoints);
   $max: breakpoint-max($upper, $breakpoints);
@@ -100,9 +103,9 @@
   }
 }
 
-// Media between the breakpoint's minimum and maximum widths.
-// No minimum for the smallest breakpoint, and no maximum for the largest one.
-// Makes the @content apply only to the given breakpoint, not viewports any wider or narrower.
+// Media between the breakpoint's minimum and maximum widths
+// No minimum for the smallest breakpoint, and no maximum for the largest one
+// Makes the `@content` apply only to the given breakpoint, not viewports any wider or narrower
 @mixin media-breakpoint-only($name, $breakpoints: $grid-breakpoints) {
   $min: breakpoint-min($name, $breakpoints);
   $max: breakpoint-max($name, $breakpoints);
