--- a/assets/css/bootstrap/mixins/_float.scss
+++ b/assets/css/bootstrap/mixins/_float.scss
@@ -1,5 +1,7 @@
 // stylelint-disable declaration-no-important
 
+// Float
+
 @mixin float-left {
   float: left !important;
   @include deprecate("The `float-left` mixin", "v4.3.0", "v5");
