--- a/assets/css/bootstrap/mixins/_table-row.scss
+++ b/assets/css/bootstrap/mixins/_table-row.scss
@@ -1,8 +1,7 @@
-// Tables
+// Table Row
 
 @mixin table-row-variant($state, $background, $border: null) {
-  // Exact selectors below required to override `.table-striped` and prevent
-  // inheritance to nested tables.
+  // Exact selectors below required to override `.table-striped` and prevent inheritance to nested tables
   .table-#{$state} {
     &,
     > th,
@@ -21,7 +20,7 @@
   }
 
   // Hover states for `.table-hover`
-  // Note: this is not available for cells or rows within `thead` or `tfoot`.
+  // Note: this is not available for cells or rows within `thead` or `tfoot`
   .table-hover {
     $hover-background: darken($background, 5%);
 
