--- a/assets/css/bootstrap/mixins/_text-emphasis.scss
+++ b/assets/css/bootstrap/mixins/_text-emphasis.scss
@@ -1,6 +1,6 @@
 // stylelint-disable declaration-no-important
 
-// Typography
+// Text Emphasis
 
 @mixin text-emphasis-variant($parent, $color) {
   #{$parent} {
