--- a/assets/css/bootstrap/utilities/_align.scss
+++ b/assets/css/bootstrap/utilities/_align.scss
@@ -1,5 +1,7 @@
 // stylelint-disable declaration-no-important
 
+// Alignment
+
 .align-baseline    { vertical-align: baseline !important; } // Browser default
 .align-top         { vertical-align: top !important; }
 .align-middle      { vertical-align: middle !important; }
