--- a/assets/css/bootstrap/utilities/_embed.scss
+++ b/assets/css/bootstrap/utilities/_embed.scss
@@ -1,5 +1,8 @@
 // Credit: Nicolas Gallagher and SUIT CSS.
 
+// Embed
+
+// Enable embedding in a responsive display
 .embed-responsive {
   position: relative;
   display: block;
