--- a/assets/css/bootstrap/utilities/_shadows.scss
+++ b/assets/css/bootstrap/utilities/_shadows.scss
@@ -1,5 +1,7 @@
 // stylelint-disable declaration-no-important
 
+// Shadow
+
 .shadow-sm { box-shadow: $box-shadow-sm !important; }
 .shadow { box-shadow: $box-shadow !important; }
 .shadow-lg { box-shadow: $box-shadow-lg !important; }
