--- a/assets/css/bootstrap/utilities/_sizing.scss
+++ b/assets/css/bootstrap/utilities/_sizing.scss
@@ -1,6 +1,6 @@
 // stylelint-disable declaration-no-important
 
-// Width and height
+// Width and Height
 
 @each $prop, $abbrev in (width: w, height: h) {
   @each $size, $length in $sizes {
@@ -11,7 +11,7 @@
 .mw-100 { max-width: 100% !important; }
 .mh-100 { max-height: 100% !important; }
 
-// Viewport additional helpers
+// Additional Viewport Helpers
 
 .min-vw-100 { min-width: 100vw !important; }
 .min-vh-100 { min-height: 100vh !important; }
