--- a/assets/css/bootstrap/_alert.scss
+++ b/assets/css/bootstrap/_alert.scss
@@ -1,4 +1,4 @@
-// Base styles
+// Alert
 
 .alert {
   position: relative;
@@ -10,7 +10,7 @@
 
 // Headings for larger alerts
 .alert-heading {
-  // Specified to prevent conflicts of changing $headings-color
+  // Specified to prevent conflicts of changing `$headings-color`
   color: inherit;
 }
 
@@ -19,11 +19,9 @@
   font-weight: $alert-link-font-weight;
 }
 
+// Dismissible Alert
 
-// Dismissible alerts
-
-// Expand the right padding and account for the close button's positioning.
-
+// Expand the right padding and account for the close button's positioning
 .alert-dismissible {
   padding-right: $close-font-size + $alert-padding-x * 2;
 
@@ -37,11 +35,7 @@
   }
 }
 
-
-// Alternate styles
-
-// Generate contextual modifier classes for colorizing the alert.
-
+// Generate contextual modifier classes for colorizing the alert
 @each $color, $value in $theme-colors {
   .alert-#{$color} {
     @include alert-variant(theme-color-level($color, $alert-bg-level), theme-color-level($color, $alert-border-level), theme-color-level($color, $alert-color-level));
