--- a/assets/css/bootstrap/_breadcrumb.scss
+++ b/assets/css/bootstrap/_breadcrumb.scss
@@ -1,3 +1,5 @@
+// Breadcrumb
+
 .breadcrumb {
   display: flex;
   flex-wrap: wrap;
@@ -21,7 +23,8 @@
     }
   }
 
-  // IE9-11 hack to properly handle hyperlink underlines for breadcrumbs built without `<ul>`s. The `::before` pseudo-element generates an element *within* the .breadcrumb-item and thereby inherits the `text-decoration`. To trick IE into suppressing the underline, we give the pseudo-element an underline and then immediately remove it.
+  // IE9-11 hack to properly handle hyperlink underlines for breadcrumbs built without `<ul>`s. The `::before` pseudo-element generates an element within the .breadcrumb-item and thereby inherits the `text-decoration`.
+  // To trick IE into suppressing the underline, we give the pseudo-element an underline and then immediately remove it.
   + .breadcrumb-item:hover::before {
     text-decoration: underline;
   }
