--- a/assets/css/bootstrap/_carousel.scss
+++ b/assets/css/bootstrap/_carousel.scss
@@ -1,10 +1,11 @@
-// Notes on the classes:
+// Carousel
 
-// 1. .carousel.pointer-event should ideally be pan-y (to allow for users to scroll vertically) even when their scroll action started on a carousel, but for compatibility (with Firefox) we're preventing all actions instead
-// 2. The .carousel-item-left and .carousel-item-right is used to indicate where the active slide is heading.
-// 3. .active.carousel-item is the current slide.
-// 4. .active.carousel-item-left and .active.carousel-item-right is the current slide in its in-transition state. Only one of these occurs at a time.
-// 5. .carousel-item-next.carousel-item-left and .carousel-item-prev.carousel-item-right is the upcoming slide in transition.
+// Notes on the classes:
+// 1. `.carousel.pointer-event` should ideally be `pan-y` (to allow for users to scroll vertically) even when their scroll action started on a carousel, but for compatibility (with Firefox) we're preventing all actions instead.
+// 2. The `.carousel-item-left` and `.carousel-item-right` is used to indicate where the active slide is heading.
+// 3. `.active.carousel-item` is the current slide.
+// 4. `.active.carousel-item-left` and `.active.carousel-item-right` is the current slide in its in-transition state. Only one of these occurs at a time.
+// 5. `.carousel-item-next.carousel-item-left` and `.carousel-item-prev.carousel-item-right` is the upcoming slide in transition.
 
 .carousel {
   position: relative;
@@ -47,9 +48,7 @@
   transform: translateX(-100%);
 }
 
-
-// Alternate transitions
-
+// Alternate transition
 .carousel-fade {
   .carousel-item {
     opacity: 0;
@@ -72,9 +71,7 @@
   }
 }
 
-
-// Left/right controls for nav
-
+// Left/right controls for `nav`
 .carousel-control-prev,
 .carousel-control-next {
   position: absolute;
@@ -82,9 +79,9 @@
   bottom: 0;
   z-index: 1;
   // Use flex for alignment (1-3)
-  display: flex; // 1. allow flex styles
-  align-items: center; // 2. vertically center contents
-  justify-content: center; // 3. horizontally center contents
+  display: flex; // 1. Allow flex styles
+  align-items: center; // 2. Vertically center contents
+  justify-content: center; // 3. Horizontally center contents
   width: $carousel-control-width;
   color: $carousel-control-color;
   text-align: center;
@@ -99,12 +96,14 @@
     opacity: $carousel-control-hover-opacity;
   }
 }
+
 .carousel-control-prev {
   left: 0;
   @if $enable-gradients {
     background: linear-gradient(90deg, rgba($black, .25), rgba($black, .001));
   }
 }
+
 .carousel-control-next {
   right: 0;
   @if $enable-gradients {
@@ -120,18 +119,18 @@
   height: $carousel-control-icon-width;
   background: no-repeat 50% / 100% 100%;
 }
+
 .carousel-control-prev-icon {
   background-image: $carousel-control-prev-icon-bg;
 }
+
 .carousel-control-next-icon {
   background-image: $carousel-control-next-icon-bg;
 }
 
+// Optional Indicator Pips
 
-// Optional indicator pips
-
-// Add an ordered list with the following class and add a list item for each slide your carousel holds.
-
+// Add an ordered list with the following class and add a list item for each slide your carousel holds
 .carousel-indicators {
   position: absolute;
   right: 0;
@@ -140,8 +139,8 @@
   z-index: 15;
   display: flex;
   justify-content: center;
-  padding-left: 0; // override <ol> default
-  // Use the .carousel-control's width as margin so we don't overlay those
+  padding-left: 0; // override `<ol>` default
+  // Use the `.carousel-control` width as margin so we don't overlay those
   margin-right: $carousel-control-width;
   margin-left: $carousel-control-width;
   list-style: none;
@@ -157,7 +156,7 @@
     cursor: pointer;
     background-color: $carousel-indicator-active-bg;
     background-clip: padding-box;
-    // Use transparent borders to increase the hit area by 10px on top and bottom.
+    // Use transparent borders to increase the hit area by `10px` on top and bottom
     border-top: $carousel-indicator-hit-area-height solid transparent;
     border-bottom: $carousel-indicator-hit-area-height solid transparent;
     opacity: .5;
@@ -169,8 +168,7 @@
   }
 }
 
-
-// Optional captions
+// Optional Captions
 
 .carousel-caption {
   position: absolute;
