--- a/assets/css/bootstrap/_close.scss
+++ b/assets/css/bootstrap/_close.scss
@@ -1,3 +1,5 @@
+// Close
+
 .close {
   float: right;
   @include font-size($close-font-size);
@@ -7,7 +9,7 @@
   text-shadow: $close-text-shadow;
   opacity: .5;
 
-  // Override <a>'s hover style
+  // Override `<a>` hover style
   @include hover {
     color: $close-color;
     text-decoration: none;
