--- a/assets/css/bootstrap/_forms.scss
+++ b/assets/css/bootstrap/_forms.scss
@@ -1,6 +1,6 @@
 // stylelint-disable selector-no-qualifying-type
 
-// Textual form controls
+// Form
 
 .form-control {
   display: block;
@@ -16,55 +16,56 @@
   background-clip: padding-box;
   border: $input-border-width solid $input-border-color;
 
-  // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
+  // Note: This has no effect on `<select>` in some browsers, due to the limited stylability of `<select>` in CSS
   @include border-radius($input-border-radius, 0);
 
   @include box-shadow($input-box-shadow);
   @include transition($input-transition);
 
-  // Unstyle the caret on `<select>`s in IE10+.
+  // Unstyle the caret on `<select>` in IE10+
   &::-ms-expand {
     background-color: transparent;
     border: 0;
   }
 
-  // Customize the `:focus` state to imitate native WebKit styles.
+  // Customize the `:focus` state to imitate native Webkit styles
   @include form-control-focus();
 
   // Placeholder
   &::placeholder {
     color: $input-placeholder-color;
-    // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
+    // Override Firefox's unusual default opacity
+    // See https://github.com/twbs/bootstrap/pull/11526
     opacity: 1;
   }
 
-  // Disabled and read-only inputs
+  // `:disabled` and `read-only` input
 
-  // HTML5 says that controls under a fieldset > legend:first-child won't be disabled if the fieldset is disabled. Due to implementation difficulty, we don't honor that edge case; we style them as disabled anyway.
+  // HTML5 says that controls under a fieldset `> legend:first-child` won't be `:disabled` if the fieldset is `:disabled`. Due to implementation difficulty, we don't honor that edge case; we style them as disabled anyway.
   &:disabled,
   &[readonly] {
     background-color: $input-disabled-bg;
-    // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
+    // iOS fix for unreadable disabled content
+    // See https://github.com/twbs/bootstrap/issues/11655
     opacity: 1;
   }
 }
 
 select.form-control {
   &:focus::-ms-value {
-    // Suppress the nested default white text on blue background highlight given to the selected option text when the (still closed) <select> receives focus in IE and (under certain conditions) Edge, as it looks bad and cannot be made to match the appearance of the native widget.
-    // See https://github.com/twbs/bootstrap/issues/19398.
+    // Suppress the nested default white text on blue background highlight given to the selected option text when the (still closed) `<select>` receives focus in IE and (under certain conditions) Edge, as it looks bad and cannot be made to match the appearance of the native widget.
+    // See https://github.com/twbs/bootstrap/issues/19398
     color: $input-color;
     background-color: $input-bg;
   }
 }
 
-// Make file inputs better match text inputs by forcing them to new lines.
+// Make file inputs better match text inputs by forcing them to new lines
 .form-control-file,
 .form-control-range {
   display: block;
   width: 100%;
 }
-
 
 // Labels
 
@@ -92,9 +93,9 @@ select.form-control {
 }
 
 
-// Readonly controls as plain text
+// `read-only` controls as plain text
 
-// Apply class to a readonly input to make it appear like regular plain text (without any border, background color, focus indicator)
+// Apply class to a `read-only` input to make it appear like regular plain text (without any `border`, `background-color`, `:focus` indicator)
 
 .form-control-plaintext {
   display: block;
@@ -115,11 +116,9 @@ select.form-control {
   }
 }
 
+// Form Control Sizing
 
-// Form control sizing
-
-// Build on `.form-control` with modifier classes to decrease or increase the height and font-size of form controls. Repeated in `_input_group.scss` to avoid Sass extend issues.
-
+// Build on `.form-control` with modifier classes to decrease or increase the `height` and `font-size` of form controls. Repeated in `_input_group.scss` to avoid Sass extend issues.
 .form-control-sm {
   height: $input-height-sm;
   padding: $input-padding-y-sm $input-padding-x-sm;
@@ -148,10 +147,9 @@ textarea.form-control {
   height: auto;
 }
 
-// Form groups
+// Form Group
 
 // Designed to help with the organization and spacing of vertical forms. For horizontal forms, use the predefined grid classes.
-
 .form-group {
   margin-bottom: $form-group-margin-bottom;
 }
@@ -161,11 +159,9 @@ textarea.form-control {
   margin-top: $form-text-margin-top;
 }
 
+// Form Grid
 
-// Form grid
-
-// Special replacement for our grid system's `.row` for tighter form layouts.
-
+// Special replacement for our grid system's `.row` for tighter form layouts
 .form-row {
   display: flex;
   flex-wrap: wrap;
@@ -179,11 +175,9 @@ textarea.form-control {
   }
 }
 
+// Checkboxes and Radios
 
-// Checkboxes and radios
-
-// Indent the labels to position radios/checkboxes as hanging controls.
-
+// Indent the labels to position radios/checkboxes as hanging controls
 .form-check {
   position: relative;
   display: block;
@@ -219,19 +213,16 @@ textarea.form-control {
   }
 }
 
-
-// Form validation
+// Form Validation
 
 // Provide feedback to users when form field values are valid or invalid. Works primarily for client-side validation via scoped `:invalid` and `:valid` pseudo-classes but also includes `.is-invalid` and `.is-valid` classes for server side validation.
-
 @each $state, $data in $form-validation-states {
   @include form-validation-state($state, map-get($data, color), map-get($data, icon));
 }
 
-// Inline forms
+// Inline Form
 
-// Make forms appear inline(-block) by adding the `.form-inline` class. Inline forms begin stacked on extra small (mobile) devices and then go inline when viewports reach <768px. Requires wrapping inputs and labels with `.form-group` for proper display of default HTML form controls and our custom form controls (e.g., input groups).
-
+// Make forms appear `inline(-block)` by adding the `.form-inline` class. Inline forms begin stacked on extra small (mobile) devices and then go inline when viewports reach 768px. Requires wrapping inputs and labels with `.form-group` for proper display of default HTML form controls and our custom form controls (e.g., input groups).
 .form-inline {
   display: flex;
   flex-flow: row wrap;
@@ -277,7 +268,7 @@ textarea.form-control {
       width: auto;
     }
 
-    // Remove default margin on radios/checkboxes that were used for stacking, and then undo the floating of radios and checkboxes to match.
+    // Remove default margin on radios/checkboxes that were used for stacking, and then undo the floating of radios and checkboxes to match
     .form-check {
       display: flex;
       align-items: center;
