--- a/assets/css/bootstrap/_images.scss
+++ b/assets/css/bootstrap/_images.scss
@@ -1,12 +1,13 @@
-// Responsive images (ensure images don't scale beyond their parents)
+// Image
 
+// Responsive image (ensure images don't scale beyond their parents)
 // This is purposefully opt-in via an explicit class rather than being the default for all `<img>`s. We previously tried the "images are responsive by default" approach in Bootstrap v2, and abandoned it in Bootstrap v3 because it breaks lots of third-party widgets (including Google Maps) which weren't expecting the images within themselves to be involuntarily resized.
 // See also https://github.com/twbs/bootstrap/issues/18178
 .img-fluid {
   @include img-fluid;
 }
 
-// Image thumbnails
+// Image thumbnail
 .img-thumbnail {
   padding: $thumbnail-padding;
   background-color: $thumbnail-bg;
@@ -18,10 +19,9 @@
   @include img-fluid;
 }
 
-// Figures
-
+// Figure
 .figure {
-  // Ensures the caption's text aligns with the image.
+  // Ensures the caption's text aligns with the image
   display: inline-block;
 }
 
