--- a/assets/css/bootstrap/_modal.scss
+++ b/assets/css/bootstrap/_modal.scss
@@ -1,3 +1,4 @@
+// Modals
 // .modal-open      - body class for killing the scroll
 // .modal           - container to scroll within
 // .modal-dialog    - positioning shell for the actual modal
@@ -24,19 +25,19 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  // Prevent Chrome on Windows from adding a focus outline. For details, see
-  // https://github.com/twbs/bootstrap/pull/10951.
+  // Prevent Chrome on Windows from adding a focus outline.
+  // See https://github.com/twbs/bootstrap/pull/10951.
   outline: 0;
   // We deliberately don't use `-webkit-overflow-scrolling: touch;` due to a gnarly iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
   // See also https://github.com/twbs/bootstrap/issues/17695
 }
 
-// Shell div to position the modal with bottom padding
+// Shell `div` to position the modal with bottom padding
 .modal-dialog {
   position: relative;
   width: auto;
   margin: $modal-dialog-margin;
-  // allow clicks to pass through for custom click handling to close modal
+  // Allow clicks to pass through for custom click handling to close modal
   pointer-events: none;
 
   // When fading in the modal, animate it to slide down
@@ -96,12 +97,12 @@
   }
 }
 
-// Actual modal
+// Actual Modal
 .modal-content {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog` counteract the pointer-events: none; in the .modal-dialog
+  width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog` to counteract the `pointer-events: none;` in the `.modal-dialog`
   color: $modal-content-color;
   pointer-events: auto;
   background-color: $modal-content-bg;
@@ -113,7 +114,7 @@
   outline: 0;
 }
 
-// Modal background
+// Modal Background
 .modal-backdrop {
   position: fixed;
   top: 0;
@@ -128,11 +129,11 @@
   &.show { opacity: $modal-backdrop-opacity; }
 }
 
-// Modal header
-// Top section of the modal w/ title and dismiss
+// Modal Header
+// Top section of the modal with title and dismiss
 .modal-header {
   display: flex;
-  align-items: flex-start; // so the close btn always stays on the upper right corner
+  align-items: flex-start; // So the close button always stays on the upper right corner
   justify-content: space-between; // Put modal header elements (title and dismiss) on opposite ends
   padding: $modal-header-padding;
   border-bottom: $modal-header-border-width solid $modal-header-border-color;
@@ -140,7 +141,7 @@
 
   .close {
     padding: $modal-header-padding;
-    // auto on the left force icon to the right even when there is no .modal-title
+    // auto on the left forces that icon to the right even when there is no `.modal-title`
     margin: (-$modal-header-padding-y) (-$modal-header-padding-x) (-$modal-header-padding-y) auto;
   }
 }
@@ -151,8 +152,8 @@
   line-height: $modal-title-line-height;
 }
 
-// Modal body
-// Where all modal content resides (sibling of .modal-header and .modal-footer)
+// Modal Body
+// Where all modal content resides (sibling of `.modal-header` and `.modal-footer`)
 .modal-body {
   position: relative;
   // Enable `flex-grow: 1` so that the body take up as much space as possible when should there be a fixed height on `.modal-dialog`.
@@ -164,7 +165,7 @@
 .modal-footer {
   display: flex;
   align-items: center; // vertically center
-  justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
+  justify-content: flex-end; // Right align buttons with flex property because `text-align` doesn't work on flex items
   padding: $modal-inner-padding;
   border-top: $modal-footer-border-width solid $modal-footer-border-color;
   @include border-bottom-radius($modal-content-border-radius);
