--- a/assets/css/bootstrap/_navbar.scss
+++ b/assets/css/bootstrap/_navbar.scss
@@ -12,8 +12,7 @@
 
 // Navbar
 
-// Provide a static navbar from which we expand to create full-width, fixed, and other navbar variations.
-
+// Provide a static navbar from which we expand to create `full-width`, `fixed`, and other navbar variations.
 .navbar {
   position: relative;
   display: flex;
@@ -22,7 +21,7 @@
   justify-content: space-between; // space out brand from logo
   padding: $navbar-padding-y $navbar-padding-x;
 
-  // Because flex properties aren't inherited, we need to redeclare these first few properties so that content nested within behave properly.
+  // Because flex properties aren't inherited, we need to redeclare these first few properties so that content nested within behave properly
   > .container,
   > .container-fluid {
     display: flex;
@@ -32,11 +31,9 @@
   }
 }
 
+// Navbar Brand
 
-// Navbar brand
-
-// Used for brand, project, or site names.
-
+// Used for brand, project, or site names
 .navbar-brand {
   display: inline-block;
   padding-top: $navbar-brand-padding-y;
@@ -51,11 +48,9 @@
   }
 }
 
-
-// Navbar nav
+// Navbar Nav
 
 // Custom navbar navigation (doesn't require `.nav`, but does make use of `.nav-link`).
-
 .navbar-nav {
   display: flex;
   flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
@@ -74,21 +69,16 @@
   }
 }
 
-
-// Navbar text
-
+// Navbar Text
 .navbar-text {
   display: inline-block;
   padding-top: $nav-link-padding-y;
   padding-bottom: $nav-link-padding-y;
 }
 
+// Responsive Navbar
 
-// Responsive navbar
-
-// Custom styles for responsive collapsing and toggling of navbar contents. Powered by the collapse Bootstrap JavaScript plugin.
-
-// When collapsed, prevent the toggleable navbar contents from appearing in the default flexbox row orientation. Requires the use of `flex-wrap: wrap` on the `.navbar` parent.
+// Custom styles for responsive collapsing and toggling of navbar contents. Powered by the collapse Bootstrap JavaScript plugin. When collapsed, prevent the toggleable navbar contents from appearing in the default flexbox row orientation. Requires the use of `flex-wrap: wrap` on the `.navbar` parent.
 .navbar-collapse {
   flex-basis: 100%;
   flex-grow: 1;
@@ -110,7 +100,7 @@
   }
 }
 
-// Keep as a separate element so folks can easily override it with another icon or image file as needed.
+// Keep as a separate element so folks can easily override it with another icon or image file as needed
 .navbar-toggler-icon {
   display: inline-block;
   width: 1.5em;
@@ -121,7 +111,7 @@
   background-size: 100% 100%;
 }
 
-// Generate series of `.navbar-expand-*` responsive classes for configuring where your navbar collapses.
+// Generate series of `.navbar-expand-*` responsive classes for configuring where your navbar collapses
 .navbar-expand {
   @each $breakpoint in map-keys($grid-breakpoints) {
     $next: breakpoint-next($breakpoint, $grid-breakpoints);
@@ -174,10 +164,9 @@
   }
 }
 
+// Navbar Themes
 
-// Navbar themes
-
-// Styles for switching between navbars with light or dark background.
+// Styles for switching between navbars with light or dark background
 
 // Dark links against a light background
 .navbar-light {
