--- a/assets/css/bootstrap/_root.scss
+++ b/assets/css/bootstrap/_root.scss
@@ -1,5 +1,7 @@
+// Root
+
 :root {
-  // Custom variable values only support SassScript inside `#{}`.
+  // Custom variable values only support SassScript inside `#{}`
   @each $color, $value in $colors {
     --#{$color}: #{$value};
   }
@@ -12,7 +14,7 @@
     --breakpoint-#{$bp}: #{$value};
   }
 
-  // Use `inspect` for lists so that quoted items keep the quotes.
+  // Use `inspect` for lists so that quoted items keep the quotes
   // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
   --font-family-sans-serif: #{inspect($font-family-sans-serif)};
   --font-family-monospace: #{inspect($font-family-monospace)};
