--- a/assets/css/bootstrap/mixins/_box-shadow.scss
+++ b/assets/css/bootstrap/mixins/_box-shadow.scss
@@ -1,3 +1,5 @@
+// Box Shadow
+
 @mixin box-shadow($shadow...) {
   @if $enable-shadows {
     $result: ();
@@ -6,7 +8,7 @@
       // We can pass `@include box-shadow(none);`
       $result: $shadow;
     } @else {
-      // Filter to avoid invalid properties for example `box-shadow: none, 1px 1px black;`
+      // Filter to avoid invalid properties (for example `box-shadow: none, 1px 1px black;`)
       @for $i from 1 through length($shadow) {
         @if nth($shadow, $i) != "none" {
           $result: append($result, nth($shadow, $i), "comma");
