--- a/assets/css/bootstrap/mixins/_grid-framework.scss
+++ b/assets/css/bootstrap/mixins/_grid-framework.scss
@@ -1,8 +1,6 @@
-// Framework grid generation
-//
-// Used only by Bootstrap to generate the correct number of grid classes given
-// any value of `$grid-columns`.
+// Framework Grid Generation
 
+// Used only by Bootstrap to generate the correct number of grid classes given any value of `$grid-columns`
 @mixin make-grid-columns($columns: $grid-columns, $gutter: $grid-gutter-width, $breakpoints: $grid-breakpoints) {
   // Common properties for all breakpoints
   %grid-column {
@@ -27,7 +25,7 @@
     }
 
     @include media-breakpoint-up($breakpoint, $breakpoints) {
-      // Provide basic `.col-{bp}` classes for equal-width flexbox columns
+      // Provide basic `.col-{bp}` classes for equal width flexbox columns
       .col#{$infix} {
         flex-basis: 0;
         flex-grow: 1;
@@ -55,7 +53,7 @@
 
       // `$columns - 1` because offsetting by the width of an entire row isn't possible
       @for $i from 0 through ($columns - 1) {
-        @if not ($infix == "" and $i == 0) { // Avoid emitting useless .offset-0
+        @if not ($infix == "" and $i == 0) { // Avoid emitting useless `.offset-0`
           .offset#{$infix}-#{$i} {
             @include make-col-offset($i, $columns);
           }
