--- a/assets/css/bootstrap/mixins/_grid.scss
+++ b/assets/css/bootstrap/mixins/_grid.scss
@@ -1,7 +1,6 @@
-/// Grid system
-//
-// Generate semantic grid columns with these mixins.
+// Grid System
 
+// Generate semantic grid columns with these mixins
 @mixin make-container($gutter: $grid-gutter-width) {
   width: 100%;
   padding-right: $gutter / 2;
@@ -9,7 +8,6 @@
   margin-right: auto;
   margin-left: auto;
 }
-
 
 // For each breakpoint, define the maximum width of the container in a media query
 @mixin make-container-max-widths($max-widths: $container-max-widths, $breakpoints: $grid-breakpoints) {
@@ -29,9 +27,7 @@
 
 @mixin make-col-ready($gutter: $grid-gutter-width) {
   position: relative;
-  // Prevent columns from becoming too narrow when at smaller grid tiers by
-  // always setting `width: 100%;`. This works because we use `flex` values
-  // later on to override this initial width.
+  // Prevent columns from becoming too narrow when at smaller grid tiers by always setting `width: 100%;`. This works because we use flex values later on to override this initial width.
   width: 100%;
   padding-right: $gutter / 2;
   padding-left: $gutter / 2;
@@ -39,9 +35,7 @@
 
 @mixin make-col($size, $columns: $grid-columns) {
   flex: 0 0 percentage($size / $columns);
-  // Add a `max-width` to ensure content within each column does not blow out
-  // the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
-  // do not appear to require this.
+  // Add a `max-width` to ensure content within each column does not blow out the width of the column. Applies to IE10+ and Firefox. Chrome and Safari do not appear to require this.
   max-width: percentage($size / $columns);
 }
 
