--- a/assets/css/bootstrap/mixins/_nav-divider.scss
+++ b/assets/css/bootstrap/mixins/_nav-divider.scss
@@ -1,7 +1,6 @@
-// Horizontal dividers
-//
-// Dividers (basically an hr) within dropdowns and nav lists
+// Horizontal Nav Divider
 
+// Dividers (basically an `hr`) within dropdowns and `nav` lists
 @mixin nav-divider($color: $nav-divider-color, $margin-y: $nav-divider-margin-y) {
   height: 0;
   margin: $margin-y 0;
