--- a/assets/css/bootstrap/mixins/_resize.scss
+++ b/assets/css/bootstrap/mixins/_resize.scss
@@ -1,6 +1,6 @@
-// Resize anything
+// Resize
 
 @mixin resizable($direction) {
   overflow: auto; // Per CSS3 UI, `resize` only applies when `overflow` isn't `visible`
-  resize: $direction; // Options: horizontal, vertical, both
+  resize: $direction; // Options: `horizontal`, `vertical`, `both`
 }
