--- a/assets/css/bootstrap/mixins/_text-hide.scss
+++ b/assets/css/bootstrap/mixins/_text-hide.scss
@@ -1,3 +1,5 @@
+// Text Hide
+
 // CSS image replacement
 @mixin text-hide($ignore-warning: false) {
   // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
