--- a/assets/css/bootstrap/utilities/_display.scss
+++ b/assets/css/bootstrap/utilities/_display.scss
@@ -1,9 +1,8 @@
 // stylelint-disable declaration-no-important
 
-//
-// Utilities for common `display` values
-//
+// Display
 
+// Utilities for common `display` values
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
@@ -14,11 +13,7 @@
   }
 }
 
-
-//
 // Utilities for toggling `display` in print
-//
-
 @media print {
   @each $value in $displays {
     .d-print-#{$value} { display: $value !important; }
