--- a/assets/css/bootstrap/utilities/_flex.scss
+++ b/assets/css/bootstrap/utilities/_flex.scss
@@ -1,9 +1,8 @@
 // stylelint-disable declaration-no-important
 
-// Flex variation
-//
-// Custom styles for additional flex alignment options.
+// Flex Variation
 
+// Custom styles for additional flex alignment options
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
