--- a/assets/css/bootstrap/utilities/_float.scss
+++ b/assets/css/bootstrap/utilities/_float.scss
@@ -1,5 +1,7 @@
 // stylelint-disable declaration-no-important
 
+// Float
+
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
