--- a/assets/css/bootstrap/utilities/_overflow.scss
+++ b/assets/css/bootstrap/utilities/_overflow.scss
@@ -1,5 +1,7 @@
 // stylelint-disable declaration-no-important
 
+// Overflow
+
 @each $value in $overflows {
   .overflow-#{$value} { overflow: $value !important; }
 }
