--- a/assets/css/bootstrap/utilities/_position.scss
+++ b/assets/css/bootstrap/utilities/_position.scss
@@ -1,12 +1,13 @@
 // stylelint-disable declaration-no-important
 
-// Common values
+// Position
+
+// Common Values
 @each $position in $positions {
   .position-#{$position} { position: $position !important; }
 }
 
 // Shorthand
-
 .fixed-top {
   position: fixed;
   top: 0;
