--- a/assets/css/bootstrap/utilities/_stretched-link.scss
+++ b/assets/css/bootstrap/utilities/_stretched-link.scss
@@ -1,6 +1,4 @@
-//
-// Stretched link
-//
+// Stretched Link
 
 .stretched-link {
   &::after {
@@ -13,7 +11,8 @@
     // Just in case `pointer-events: none` is set on a parent
     pointer-events: auto;
     content: "";
-    // IE10 bugfix, see https://stackoverflow.com/questions/16947967/ie10-hover-pseudo-class-doesnt-work-without-background-color
+    // IE10 bugfix
+    // See https://stackoverflow.com/questions/16947967/ie10-hover-pseudo-class-doesnt-work-without-background-color
     background-color: rgba(0, 0, 0, 0);
   }
 }
