--- a/assets/css/bootstrap/utilities/_visibility.scss
+++ b/assets/css/bootstrap/utilities/_visibility.scss
@@ -1,8 +1,6 @@
 // stylelint-disable declaration-no-important
 
-//
-// Visibility utilities
-//
+// Visibility
 
 .visible {
   visibility: visible !important;
